; vim:ft=lisp:ts=2:set expandtab:

(executable
 (name modem)
 (public_name moter-modem)
 (package moter-modem)
 (libraries
  core
  lwt
  lwt.unix
  cmdliner
  fmt
  fmt.cli
  fmt.tty
  logs
  logs.fmt
  logs.cli
  tls
  tls.lwt
  x509
  unix
  cbor
  extunix
  ipaddr
  mqtt_lwt
  uri
  hex)
 (preprocess
  (pps lwt_ppx ppx_let ppx_jane)))
